# mev-shield

./: .env  .env.example  .env.production  .gitattributes  .gitignore  CMakeLists.complete.txt  CMakeLists.rapidjson.txt  CMakeLists.txt  CMakeLists.txt.backup  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.clean  Dockerfile.complete  Dockerfile.debug  Dockerfile.fixed  Dockerfile.integration  Dockerfile.prod  Dockerfile.rapidjson  Dockerfile.wsl2  LICENSE  Makefile  README.md  config.yaml  deploy_production.sh  docker-compose.prod.yml  final_verification.sh  find_config.cpp  load_env.sh  mev-shield  mev_shield_integration.cpp  mev_shield_single.cpp  production_checklist.md  run_complete_test.sh  start_mev_shield.sh  start_mev_shield_fixed.sh  test_config  test_config.cpp  test_env  test_env.cpp  (+5 more)
build_native/: CMakeCache.txt
clients/javascript/: mev-shield-client.js  package.json
clients/python/: mev_shield_client.py  setup.py
config/: config.prod.yaml  config.yaml
examples/: simple_trading_bot.py
scripts/: build.sh  install_deps.sh  quick_start.sh  run.sh
src/: main.cpp  main.cpp.backup  main_debug.cpp  main_fixed.cpp  main_universal.cpp
src/analytics/: risk_engine.hpp
src/common/: config.hpp  config_loader.cpp  config_loader.hpp  config_loader_fixed.cpp  config_loader_fixed.hpp  logger.hpp
src/network/: api_server.hpp  mempool_monitor.hpp  rpc_client.hpp
